--- a/client/src/app/tab-0/tab-0.component.html
+++ b/client/src/app/tab-0/tab-0.component.html
@@ -1,24 +1,31 @@
-<p>tab-0 works!</p>
-<img src="https://placehold.co/200x100/ABABAB/FF0000/png" alt="">
-
-<!-- user-list.component.html -->
-<div>
-  <h2>User List</h2>
-  <ul>
-    <li *ngFor="let user of users">{{ user.pilasResult }}</li>
-  </ul>
-</div>
-
-<div>
-  <h2>Pila List</h2>
-  <ul>
-    <li *ngFor="let pila of pilas">{{ pila.idQuery }}</li>
-  </ul>
-</div>
-
-<div>
-  <h2>Block List</h2>
-  <ul>
-    <li *ngFor="let block of blocks">{{ block.idQuery }}</li>
-  </ul>
+<!-- your-component.component.html -->
+<div class="flex flex-col gap-1 w-0 flex-1 basis-[24%] p-2 h-full order-2 border rounded-md border-neutral-800">
+  <div class="flex items-center justify-between">
+    <h2 class="text-xl font-bold text-capitalize">{{ title }}</h2>
+    <div class="flex items-center gap-2">
+      <button class="p-1 text-sm text-white rounded-sm bg-neutral-800" (click)="reload()">
+        Reload
+      </button>
+    </div>
+  </div>
+  <div class="relative flex flex-col h-full overflow-x-hidden overflow-y-auto rounded-sm bg-neutral-800">
+    <div *ngIf="isLoading">
+      <p class="p-2">Carregando...</p>
+    </div>
+    <div *ngIf="isError">
+      <p>Não foi possível carregar os dados</p>
+    </div>
+    <div *ngIf="!isLoading && !isError && queryData?.idQuery">
+      <div class="flex flex-col">
+        <div>
+          {{ users }}
+        </div>
+      </div>
+    </div>
+    <div *ngIf="!isLoading && !isError && !queryData?.idQuery">
+      <div class="flex flex-col items-center justify-center flex-1">
+        <h3 class="text-xl font-bold">Nenhum resultado</h3>
+      </div>
+    </div>
+  </div>
 </div>
