fix: tab 0 user data!

--- a/client/src/app/tab-0/tab-0.component.html
+++ b/client/src/app/tab-0/tab-0.component.html
@@ -16,10 +16,9 @@
       <p>Não foi possível carregar os dados</p>
     </div>
     <div *ngIf="!isLoading && !isError && queryData?.idQuery">
-      <div class="flex flex-col">
-        <div>
-          {{ users }}
-        </div>
+      <div *ngFor="let user of users">
+        {{ user.id }}
+        {{ user.nome }}
       </div>
     </div>
     <div *ngIf="!isLoading && !isError && !queryData?.idQuery">
