style: font size at 16px!

--- a/client/src/app/tab-1/tab-1.component.html
+++ b/client/src/app/tab-1/tab-1.component.html
@@ -2,7 +2,7 @@
 <!-- <img src="https://placehold.co/600x400/000000/FF0000/png" alt=""> -->
 
 <section class="central_top">
-  <p>Courses</p>
+  <p>Carteira</p>
 </section>
 
 <section class="central">
