--- a/client/src/app/tab-0/tab-0.component.css
+++ b/client/src/app/tab-0/tab-0.component.css
@@ -1,6 +1,7 @@
 
 table {
-    width: 400px;
+    max-height: 200px;
+    max-width: 400px;
     border-collapse: collapse;
     margin-top: 20px;
 }
@@ -11,21 +12,21 @@ th, td {
     border-bottom: 1px solid #ddd;
 }
 
-th {
-    background-color: #f2f2f2;
-}
-
 tr {
     transition: background-color 0.4s ease;
 }
 
 tr:hover {
-    color: rgb(46, 255, 77);
-    background-color: #212121;
+    color: #8bbbff;
+    background-color: #121e2f;
 }
 
 td {
     max-height: 8px;
+}
+
+table, th, td {
+    border-color: #1b3862; /* Set your preferred border color */
 }
 
 .limited_width {
