--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -29,7 +29,6 @@ main {
     position: relative;
 }
 
-/* Global */
 * {
     margin: 0;
     padding: 0;
@@ -37,5 +36,11 @@ main {
     font-family: 'Ubuntu Mono';
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { 
+    height: 100%;
+}
+
+body { 
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
