--- a/client/src/app/tab-1/tab-1.component.html
+++ b/client/src/app/tab-1/tab-1.component.html
@@ -1,14 +1,4 @@
 <!-- <p>tab-1 works!</p> -->
 <!-- <img src="https://placehold.co/600x400/000000/FF0000/png" alt=""> -->
 
-<section class="central_top">
-  <p>Carteira</p>
-</section>
-
-<section class="central">
-  
-  <div class="grid-container">
-
-
-  </div>
-</section>
+<div *ngFor="let message of messages">{{ message.message }}</div>
