--- a/client/src/app/tab-1/tab-1.component.html
+++ b/client/src/app/tab-1/tab-1.component.html
@@ -1,4 +1,6 @@
 <!-- <p>tab-1 works!</p> -->
 <!-- <img src="https://placehold.co/600x400/000000/FF0000/png" alt=""> -->
 
-<div *ngFor="let message of messages">{{ message.message }}</div>
+<div *ngFor="let message of messages">
+    {{ message }}
+</div>
