chore: added model and tried loggin!

--- a/client/src/app/tab-2/tab-2.component.html
+++ b/client/src/app/tab-2/tab-2.component.html
@@ -1,9 +1,27 @@
-<!-- <p>tab-2 works!</p> -->
-<!-- <img src="https://placehold.co/600x400/000000/0000FF/png" alt=""> -->
-
-<section class="central_top">
-  <p>Roadmaps</p>
-  <p style="color: red;">This section is under development.</p>
-</section>
-
-<img src="../../assets/1280px-Treasure_map.svg.png" alt="Took from wikipedia treasure maps">
+<div class="grid">
+  <div class="grid-item">
+    <div class="content">
+      <p>Block 1</p>
+      <p>Additional content goes here...</p>
+    </div>
+  </div>
+  <div class="grid-item">
+    <div class="content">
+      <p>Block 2</p>
+      <p>Additional content goes here...</p>
+    </div>
+  </div>
+  <div class="grid-item">
+    <div class="content">
+      <p>Block 3</p>
+      <p>Additional content goes here...</p>
+    </div>
+  </div>
+  <div class="grid-item">
+    <div class="content">
+      <p>Block 4</p>
+      <p>Additional content goes here...</p>
+    </div>
+  </div>
+  <!-- Repeat similar structure for other grid items -->
+</div>
