--- a/client/src/app/tab-2/tab-2.component.css
+++ b/client/src/app/tab-2/tab-2.component.css
@@ -1,16 +1,37 @@
-.central_top {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1536px;
-  padding-left: .75rem;
-  padding-right: .75rem;
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 }
 
-.central_top {
-  padding-top: 40px;
-  padding-bottom: 40px;
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, 100px);
+  grid-gap: 10px;
 }
 
-img {
-  max-height: 400px;
+.grid-item {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+}
+
+.content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: lightblue;
+  transform: scale(1);
+  transition: transform 0.3s ease;
+  opacity: 0;
+}
+
+.grid-item:hover .content {
+  transform: scale(1.2);
+  opacity: 1;
 }
