--- a/client/src/app/tab-1/tab-1.component.html
+++ b/client/src/app/tab-1/tab-1.component.html
@@ -1,6 +1,21 @@
 <!-- <p>tab-1 works!</p> -->
 <!-- <img src="https://placehold.co/600x400/000000/FF0000/png" alt=""> -->
 
-<div *ngFor="let message of messages">
-    {{ message }}
+<div class="grid">
+    <div class="grid-item">1
+
+        <div *ngFor="let message of messages">
+            {{ message }}
+        </div>
+
+    </div>
+    <div class="grid-item">2</div>
+    <div class="grid-item">3</div>
+    <div class="grid-item">4</div>
+    <div class="grid-item">5</div>
+    <div class="grid-item">6</div>
+    <div class="grid-item">7</div>
+    <div class="grid-item">8</div>
+    <div class="grid-item">9</div>
 </div>
+
