--- a/client/src/app/tab-1/tab-1.component.css
+++ b/client/src/app/tab-1/tab-1.component.css
@@ -1,15 +1,17 @@
-.grid {
-    margin: 0;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    height: 100vh;
-}
-
-.grid {
+* {
     font-size: 8px;
 }
 
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    height: 90vh;
+}
+
 .grid-item {
+    border: 1px solid #ccc;
+    padding: 20px;
+    text-align: left;
     overflow: scroll;
 }
