--- a/client/src/app/tab-1/tab-1.component.html
+++ b/client/src/app/tab-1/tab-1.component.html
@@ -2,20 +2,51 @@
 <!-- <img src="https://placehold.co/600x400/000000/FF0000/png" alt=""> -->
 
 <div class="grid">
-    <div class="grid-item">1
-
-        <div *ngFor="let message of messages">
-            {{ message }}
-        </div>
-
+  
+  <div class="grid-item">
+    <p>Server heartbeat</p>
+    <div class="item" *ngFor="let message of pulseMessages">
+      {{ message }}
     </div>
-    <div class="grid-item">2</div>
-    <div class="grid-item">3</div>
-    <div class="grid-item">4</div>
-    <div class="grid-item">5</div>
-    <div class="grid-item">6</div>
-    <div class="grid-item">7</div>
-    <div class="grid-item">8</div>
-    <div class="grid-item">9</div>
-</div>
+  </div>
 
+  <div class="grid-item">6</div>
+
+  <div class="grid-item">
+    <p>Bloco Minerado</p>
+    <div class="item" *ngFor="let message of sseMessages">
+      <div *ngIf="message.messageType === 'MINED_BLOCK'">
+        {{ message.message }}
+      </div>
+    </div>
+  </div>
+
+  <div class="grid-item">
+    <p>Pila Minerado</p>
+    <div class="item" *ngFor="let message of sseMessages">
+      <div *ngIf="message.messageType === 'MINED_PILA'">
+        {{ message.message }}
+      </div>
+    </div>
+  </div>
+
+  
+  <div class="grid-item">
+    <p>Bloco Validado</p>
+    <div class="item" *ngFor="let message of sseMessages">
+      <div *ngIf="message.messageType === 'VALID_BLOCK'">
+        {{ message.message }}
+      </div>
+    </div>
+  </div>
+
+  <div class="grid-item">
+    <p>Pila validado</p>
+    <div class="item" *ngFor="let message of sseMessages">
+      <div *ngIf="message.messageType === 'VALID_PILA'">
+        {{ message.message }}
+      </div>
+    </div>
+  </div>
+
+</div>
