style: box height!

--- a/client/src/app/tab-1/tab-1.component.html
+++ b/client/src/app/tab-1/tab-1.component.html
@@ -16,7 +16,7 @@
     <p>Server Side Events</p>
     <div class="box">
       <div *ngFor="let message of sseMessages">
-        { message.messages }
+        {{ message.message }}
       </div>
     </div>
   </div>
