--- a/client/src/app/tab-2/tab-2.component.css
+++ b/client/src/app/tab-2/tab-2.component.css
@@ -1,37 +1,14 @@
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
+* {
+  font-size: 8px;
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, 100px);
-  grid-gap: 10px;
+table {
+  margin: 10px;
+  border-collapse: collapse;
+  width: 90%;
 }
 
-.grid-item {
-  position: relative;
-  width: 100px;
-  height: 100px;
-  overflow: hidden;
-}
-
-.content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: lightblue;
-  transform: scale(1);
-  transition: transform 0.3s ease;
-  opacity: 0;
-}
-
-.grid-item:hover .content {
-  transform: scale(1.2);
-  opacity: 1;
+th, td {
+  border: 1px solid black;
+  padding: 2px;
 }
